2021/sep/demo-server-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: demo-server-v1
 namespace: jeevan-namespace
spec:
 replicas: 1
 selector:
  matchLabels:
   app: demo-server
   version: v1
 template:
  metadata:
   labels:
    app: demo-server
    version: v1
  spec:
   containers:
   - name: demo-server
     image: 10.20.52.114:5000/demo-server:v1
     imagePullPolicy: Always
     ports:
     - containerPort: 80
