2021/sep/demo-server-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: demo-server-v2
 namespace: jeevan-namespace
spec:
 replicas: 2
 selector:
  matchLabels:
   app: demo-server
   version: v2
 template:
  metadata:
   labels:
    app: demo-server
    version: v2
  spec:
   containers:
   - name: demo-server
     image: 10.20.52.114:5000/demo-server:v2
     imagePullPolicy: Always
     ports:
     - containerPort: 80
