2021/sep/demo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: demo-server-service
 namespace: jeevan-namespace
spec:
 selector:
  app: demo-server
 ports:
 - name: http
   port: 80
